--- a/index.html
+++ b/index.html
@@ -10,4 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io()
+  </script>
 </html>
